Enhance page header view, fix default & imagemin tasks
Add linear gradient for bottom edge of page header. Fixed list of tasks
for default grunt task. Fix imagemin task by add pngquant plugin.

--- a/www/less/index.less
+++ b/www/less/index.less
@@ -80,3 +80,5 @@
 //@import "components/footer.less";
 
 @import "node_modules/bootswatch/superhero/bootswatch.less";
+
+@import "components/page-header.less";
