--- a/app/templates/Default/@layout.latte
+++ b/app/templates/Default/@layout.latte
@@ -13,24 +13,15 @@
     <![endif]-->
   </head>
   <body>
+    {include 'components/page-header.latte'}
     <div class="container">
 
-      <div class="page-header" id="banner">
-        <div class="row">
-          <div class="col-lg-3">
-            <img src="./img/js-superhero_v1.png" alt="JS superhero" title="JS superhero" class="img-responsive" />
-          </div>
-          <div class="col-lg-9">
-
-          </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-4">
+          {include 'components/menu.latte'}
         </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-3 col-sm-4">
-            {include './components/menu.latte'}
-          </div>
-          <div class="col-lg-9 col-md-9 col-sm-8">
-            {block content}{/block}
-          </div>
+        <div class="col-lg-9 col-md-9 col-sm-8">
+          {block content}{/block}
         </div>
       </div>
 
