--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -5,7 +5,7 @@
     <title>Bačisovi to jde</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="./css/bacisovi-tode.css">
+    <link rel="stylesheet" href="{$basePath}/css/bacisovi-tode.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="../bower_components/html5shiv/dist/html5shiv.js"></script>
@@ -13,6 +13,7 @@
     <![endif]-->
   </head>
   <body>
+
     {include 'components/page-header.latte'}
     <div class="container">
 
