--- a/app/templates/components/menu.latte
+++ b/app/templates/components/menu.latte
@@ -1,9 +1,14 @@
 <div class="list-group table-of-contents">
+  <a class="list-group-item" n:href="Default:default">
+    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+    Intro
+  </a>
+
   <a class="list-group-item" href="/cookery-book">
     <span class="glyphicon glyphicon-leaf" aria-hidden="true"></span>
     Cookery book
   </a>
-  <a class="list-group-item" n:href="Default:countdowner">
+  <a class="list-group-item" n:href="Countdowner:default">
     <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
     Countdowner
   </a>
