--- a/app/templates/components/page-header.latte
+++ b/app/templates/components/page-header.latte
@@ -3,8 +3,10 @@
     <div class="row">
       <div class="col-lg-offset-1 col-lg-6">
         <div class="banner">
-          <img src="./img/js-superhero_v1.png" alt="JS superhero"
-            title="JS superhero" class="img-responsive" />
+          <a n:href="Default:default">
+            <img src="{$basePath}/img/js-superhero_v1.png" alt="JS superhero"
+              title="JS superhero" class="img-responsive" />
+          </a>
         </div>
       </div>
     </div>
