--- a/www/less/index.less
+++ b/www/less/index.less
@@ -7,6 +7,7 @@
 @import "node_modules/bootstrap/less/mixins.less";
 
 @import "node_modules/bootswatch/superhero/variables.less";
+@import "variables.less";
 
 // Reset and dependencies
 @import "node_modules/bootstrap/less/normalize.less";
