--- a/app/templates/Default/default.latte
+++ b/app/templates/Default/default.latte
@@ -1,4 +1,9 @@
 {layout '../@layout.latte'}
 
 {block content}
-  <h1>Default</h1>
+  <div class="row text-center">
+
+    <div class="col-lg-12 col-md-12 col-sm-12">
+    </div>
+
+  </div>
