--- a/app/templates/components/page-header.latte
+++ b/app/templates/components/page-header.latte
@@ -1,16 +1,8 @@
 <div class="page-header">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-offset-1 col-lg-6">
-        <div class="banner">
-          <a n:href="Default:default">
-            <img src="{$basePath}/img/js-superhero_v1.png" alt="JS superhero"
-              title="JS superhero" class="img-responsive" />
-          </a>
-        </div>
-      </div>
-    </div>
+  <div class="container-fluid text-center">
+    <div class="row"><div class="col-lg-offset-1 col-lg-5">
+    <img src="{$basePath}/img/js-superhero_v1.png" alt="JS superhero"
+      title="JS superhero" class="img-responsive" />
+    </div></div>
   </div>
-
-  <div class="gradient"></div>
 </div>
