--- a/www/less/variables.less
+++ b/www/less/variables.less
@@ -1,1 +1,16 @@
 @brand-primary: #DAB92D; // #FFD739;
+
+@body-bg: #0050A4;
+@text-color: #ffffff;
+
+@main-font: "Lato"; // "Source Sans Pro";
+@font-family-sans-serif:  @main-font, "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-size-base: 16px;
+
+@navbar-default-bg: @body-bg;
+@navbar-default-color: #ccc;
+@navbar-default-link-color: #ccc;
+@navbar-default-link-hover-color: #000;
+@navbar-default-link-active-color: #fff;
+@navbar-default-link-active-bg: @brand-primary;
+
