Enhance countdowner page, add footer
Countdowner page enhanced with added icons and better styling. Added page
footer.

--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -19,5 +19,16 @@
     <div class="container">
       {block content /}
     </div>
+
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div>
+            {block footer /}
+          </div>
+        </div>
+      </div>
+    </div class="footer">
+
   </body>
 </html>
