--- a/app/templates/Countdowner/default.latte
+++ b/app/templates/Countdowner/default.latte
@@ -4,15 +4,18 @@
   <div class="row text-center">
 
     <div class="col-lg-4 col-md-4 col-sm-12">
+      <img src="{$basePath}/img/microscope-icon.png" height="128" />
       <h2>About</h2>
-
-      Countdown timer on your web. Interactive countdown since any date in future
-
-      <a href="https://github.com/horaklukas/countdowner" target="_blank">
-        <span class="glyphicon glyphicon-link" aria-hidden="true"></span> repository
-      </a>
+      <p class="text-justify">
+        Countdown timer on any website. Interactive countdown since now to any date in future.
+        Find source at
+        <a href="https://github.com/horaklukas/countdowner" target="_blank">
+          <span class="glyphicon glyphicon-link" aria-hidden="true"></span> repository
+        </a>
+      </p>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-12">
+      <img src="{$basePath}/img/swallow-icon.png" height="128" />
       <h2>Examples</h2>
 
       <h4>Odpočet 24 hodin</h4>
@@ -26,7 +29,14 @@
 
     </div>
     <div class="col-lg-4 col-md-4 col-sm-12">
+      <img src="{$basePath}/img/write-tools-icon.png" height="128" />
       <h2>Generator</h2>
     </div>
 
   </div>
+
+{/block}
+
+{block footer}
+  <a href='http://www.freepik.com/free-vector/education-icons-collection_760719.htm'>Designed by Freepik</a>
+{/block}
