--- a/www/less/index.less
+++ b/www/less/index.less
@@ -80,6 +80,7 @@
 
 @import "components/navbar.less";
 @import "components/page-header.less";
+@import "components/footer.less";
 
 @import "templates/countdowner.less";
 
