--- a/app/templates/Default/default.latte
+++ b/app/templates/Default/default.latte
@@ -1,9 +1,15 @@
 {layout '../@layout.latte'}
 
 {block content}
-  <div class="row text-center">
+  <div class="row intro">
 
-    <div class="col-lg-12 col-md-12 col-sm-12">
+    <div class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-12">
+      <section>
+        <div class="wrapper">
+          <pre class="text-justify">
+            {$code}
+          </pre>
+        </div>
+      </section>
     </div>
-
   </div>
