--- a/www/less/index.less
+++ b/www/less/index.less
@@ -16,7 +16,7 @@
 // Core CSS
 @import "node_modules/bootstrap/less/scaffolding.less";
 @import "node_modules/bootstrap/less/type.less";
-//@import "node_modules/bootstrap/less/code.less";
+@import "node_modules/bootstrap/less/code.less";
 @import "node_modules/bootstrap/less/grid.less";
 //@import "node_modules/bootstrap/less/tables.less";
 @import "node_modules/bootstrap/less/forms.less";
@@ -82,6 +82,7 @@
 @import "components/page-header.less";
 @import "components/footer.less";
 
+@import "templates/intro.less";
 @import "templates/countdowner.less";
 
 @import url("https://fonts.googleapis.com/css?family=@{main-font}:300,400,700");
